--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon .",
-    "start": "node index.js"
+    "dev": "nodemon ."
   },
   "keywords": [],
   "author": "",
